kubernetes/apps/media/tubearchivist/app/httproute-envoy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tubearchivist-envoy
  annotations:
    homepage.shamubernetes.com/enabled: "true"
    homepage.shamubernetes.com/name: "Tube Archivist"
    homepage.shamubernetes.com/description: "Watch the archived video library"
    homepage.shamubernetes.com/group: "Media"
    homepage.shamubernetes.com/order: "60"
    homepage.shamubernetes.com/favorite: "false"
    homepage.shamubernetes.com/icon: "dashboard-icons:tube-archivist"
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
    sectionName: https
  hostnames:
  - "tube.${HOME_DOMAIN}"
  rules:
  -
    backendRefs:
    - name: tubearchivist
      port: 8000
